--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
       </ul>
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <h2 class="sub-header">Section title</h2>
+      <h2 class="sub-header">列表</h2>
       <div class="table-responsive">
         <table class="table table-striped">
           <thead>
