--- a/src/app/dashboard/dlrb/rbboard/rbboard.component.html
+++ b/src/app/dashboard/dlrb/rbboard/rbboard.component.html
@@ -78,6 +78,7 @@
             <th>电话</th>
             <th>上传次数</th>
             <th>状态</th>
+            <th>操作</th>
           </tr>
           </thead>
           <tbody>
@@ -87,6 +88,7 @@
             <td>{{user.mobile}}</td>
             <td>{{user.uploadCount}}</td>
             <td>{{user.status}}</td>
+            <td><button style = "margin-left: -57px;margin-right: 5px;">通过</button><button style = "margin-left: 0px; margin-right: 6px;">拒绝</button><button style="margin-right: -56px">删除</button></td>
           </tr>
           </tbody>
         </table>
