--- a/src/app/dashboard/dlrb/rbboard/rbboard.component.html
+++ b/src/app/dashboard/dlrb/rbboard/rbboard.component.html
@@ -72,12 +72,12 @@
         <table class="table table-striped">
           <thead>
           <tr>
-            <th>姓名</th>
-            <th>openid</th>
-            <th>电话</th>
-            <th>上传次数</th>
-            <th>状态</th>
-            <th>操作</th>
+            <th style="width:100px" >姓名</th>
+            <th style="width:100px">openid</th>
+            <th style="width:100px">电话</th>
+            <th style="width:100px">上传次数</th>
+            <th style="width:100px">状态</th>
+            <th style="width:100px">操作</th>
           </tr>
           </thead>
           <tbody>
@@ -88,9 +88,9 @@
             <td>{{user.uploadCount}}</td>
             <td>{{user.status}}</td>
             <td>
-              <button style = "margin-left: -57px;margin-right: 5px;" (click)="pass(user.openid)">通过</button>
-              <button style = "margin-left: 0px; margin-right: 6px;" (click)="fail(user.openid)">拒绝</button>
-              <button style="margin-right: -56px" (click)="delete(user.openid)">删除</button></td>
+              <button style = "margin-left: -57px;margin-right: 5px; padding: 4px 12px;" (click)="pass(user.openid)"class = "btn btn-primary" >通过</button>
+              <button style = "margin-left: 0px; margin-right: 6px; padding: 4px 12px;" (click)="fail(user.openid)" class = "btn btn-primary">拒绝</button>
+              <button style="margin-right: -56px ;padding: 4px 12px;" (click)="delete(user.openid)" class = "btn btn-danger">删除</button></td>
           </tr>
           </tbody>
         </table>
